2004-11-01  Florian Boor  <florian.boor@kernelconcepts.de>

    * fileops.*: New files containing file operation implemetations.
    * main.h: New file exporting stuff from main.c.
    * main.*, fileops.*: Moved functions to fileops.
    * guitools.c: Additional check to fix mount detection if /etc/mtab 
                  is a link.
    * main.c: Handle return in lists like doubleclicks.
    * Makefile: New version: 0.22

2004-10-28  Florian Boor  <florian.boor@kernelconcepts.de>

    Released V 0.21
    * main.c: Implemented moving of multiple files.
              Removed some unused stuff.
              Added some more functions to menus.
              Fixed random selection of files.
    * guitools.*: Hide inactive mountpoints instead of disabling them.
    * main.c: Call do_scheduled_update() to set initially visible mountpoints.
              Implemented "select all".    

2004-10-28  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Implemented paste and delete for multiple files.
              Improved rename dialog.
              Changed focus behaviour of main window.
              Removed some old cruft and fixed some formating.

2004-10-27  Florian Boor  <florian.boor@kernelconcepts.de>

    *main.c: Added first bits for multi file operations.

2004-10-19  Florian Boor  <florian.boor@kernelconcepts.de>

	* main.c (toplevel): Delete if delete key is pressed. 

2004-10-16  Phil Blundell  <pb@nexus.co.uk>

	* main.c (menu_items): Add 'Send via Infrared'.
	(send_with_irda): New function.
	(show_popup): Deal with IrDA menu item.
	(main): Likewise.
	* bluetooth.c: Include dbus-glib-lowlevel.h to fix warning.
	(do_send_file): New function.
	(bluetooth_send_file): Use it.
	(irda_send_file): Likewise.  New function.
	(irda_available): New function.
	* bluetooth.h (irda_available): Add prototype.
	(irda_send_file): Likewise.

2004-10-15  Florian Boor  <florian.boor@kernelconcepts.de>
